🎉 8 배포 테스트: 페이지 내용 변경

--- a/.github/workflows/ec2-deploy-smart.yml
+++ b/.github/workflows/ec2-deploy-smart.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: 진행중인 배포 중단
         run: |
-          deployments=$(aws deploy list-deployments --application-name simple-web-content --deployment-group-name simple-web-content-group --query "deployments" --output text)
+          deployments=$(aws deploy list-deployments --application-name simple-web-content --deployment-group-name simple-web-deploy-group --query "deployments" --output text)
           for id in $deployments; do
             aws deploy stop-deployment --deployment-id $id
           done
